# NetDebugLink

./: .gitignore  CMakeLists.txt  README.md  config.env  esp_launchpad.toml  sdkconfig
.github/workflows/: build.yml
Modules/: modules.yaml
Modules/NetDebugLink/: CMakeLists.txt  NetDebugLink.cpp  NetDebugLink.hpp  README.md  blufi_init.c  blufi_security.c  blufi_user.h
User/: CMakeLists.txt  main.cpp  xrobot.yaml  xrobot_main.hpp
main/: CMakeLists.txt  main.cpp
